@@ -1,0 +1,44 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<META HTTP-EQUIV="Pragma" CONTENT="no-cache">
+@if?!Authenticate@ @AddFile?/grinder/failedlogin.cmvp@ @else@
+@if?!CheckAuthCode?ANYMODAREAS=true@ @AddFile?/grinder/nopriv.cmvp@ @else@
+
+@if?CheckReqParm?DELMOB=@
+	@MUDGrinder?EDITMOB@
+@endif@
+
+@if?CheckReqParm?<MOB=CATALOG-@
+    <HTML><BODY>
+    <SCRIPT LANGUAGE=JavaScript>
+        @if?!CheckReqParm?DELMOB=@
+            var v='@MUDGrinder?DELCATALOGMOB@';
+            if((v.length>0)&&(alert))
+                alert(v);
+        @endif@
+        opener.EditMobDone();
+        window.close();
+    </SCRIPT>
+    </BODY></HTML>
+@else@
+@if?CheckReqParm?<MOB=NEWCATA-@
+    <HTML><BODY>
+    <SCRIPT LANGUAGE=JavaScript>
+        opener.EditMobDone();
+        window.close();
+    </SCRIPT>
+    </BODY></HTML>
+@else@
+<HTML>
+<head>
+ 	<link rel="grinder icon" href="/images/grinder.ico" >
+</head>
+@AddRequestParameter?SETSHOPMOB=&SHOPMOB=@
+	<FRAMESET ROWS=80%,20% FRAMEBORDER=NO FRAMESPACING=0>
+		<FRAME NORESIZE FRAMEBORDER=NO FRAMESPACING=0 SCROLLING=AUTO SRC="/grinder/editmobform.cmvp?AUTH=@Authenticate?AUTH@&AREA=@AreaIDEncoded@&MAPSTYLE=@RequestParameterEncoded?MAPSTYLE@&MAPLEVEL=@RequestParameterEncoded?MAPLEVEL@&ROOM=@RequestParameterEncoded?ROOM@&MOB=@RequestParameterEncoded?MOB@" NAME=MAP>
+		<FRAME NORESIZE FRAMEBORDER=NO FRAMESPACING=0 SCROLLING=AUTO SRC="/grinder/canmenu2.cmvp?AUTH=@Authenticate?AUTH@&AREA=@AreaIDEncoded@&MAPSTYLE=@RequestParameterEncoded?MAPSTYLE@&MAPLEVEL=@RequestParameterEncoded?MAPLEVEL@&ROOM=@RequestParameterEncoded?ROOM@&MOB=@RequestParameterEncoded?MOB@" NAME=MENU>
+	</FRAMESET>
+</HTML>
+@endif@
+@endif@
+@endif@
+@endif@
